# fcmd

./: .gitignore  Cargo.toml  LICENSE  README.md  UX_FIXES.md  build.rs
.github/workflows/: ci.yml
docs/: archive-improvements-plan.md
src/: app.rs  archive.rs  db.rs  find.rs  icons.rs  main.rs  ops.rs  panel.rs  preview.rs  theme.rs  tree.rs  ui.rs  util.rs
src/app/: archive.rs  bookmarks.rs  bulk_rename.rs  chmod.rs  command.rs  dialogs.rs  file_ops.rs  filter.rs  find.rs  git.rs  git_ops.rs  info.rs  input.rs  marks.rs  messages.rs  mod.rs  mouse.rs  navigation.rs  polling.rs  preview_mode.rs  rename.rs  search.rs  select_pattern.rs  task_manager.rs  tasks.rs  trash.rs  tree.rs  viewer.rs  visual.rs
src/archive/: create.rs  extract.rs  mod.rs
src/exe/: mod.rs  suspicious.rs
src/fs/: du.rs  mod.rs  ops.rs  perms.rs  trash.rs
src/model/: mod.rs  panel.rs
src/preview/: mod.rs
src/search/: mod.rs
src/storage/: mod.rs
src/theme/: mod.rs
src/ui/: find_overlay.rs  hex.rs  mod.rs  overlays.rs  panel.rs  preview.rs  status.rs  tree.rs  util.rs
src/ui/overlays/: archive.rs  bookmarks.rs  bulk_rename.rs  chmod.rs  chown.rs  command.rs  confirm.rs  conflict.rs  help.rs  info.rs  input.rs  mod.rs  preview.rs  search.rs  sort.rs  tasks.rs  theme_picker.rs  trash.rs  viewer.rs  which_key.rs
src/util/: icons.rs  mod.rs  natsort.rs
src/viewer/: hexsearch.rs  highlight.rs  inspect.rs  layout.rs  mod.rs  search.rs
themes/: abyss.toml  acme.toml  adobe.toml  afterglow.toml  alabaster.toml  amber.toml  andromeda.toml  apprentice.toml  arctic.toml  ashes.toml  atom-one-dark.toml  aura-dark.toml  aurora.toml  ayu-dark.toml  ayu-light.toml  ayu-mirage.toml  badwolf.toml  bamboo.toml  base16-default-dark.toml  base16-default-light.toml  base16-ocean.toml  bbs.toml  black-atom.toml  blood-moon.toml  blueprint.toml  bluloco-dark.toml  bluloco-light.toml  boo-berry.toml  brogrammer.toml  c64.toml  camel.toml  canyon.toml  carbonfox.toml  catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  challenger-deep.toml  cherry.toml  citruszest.toml  (+198 more)
