[package]
name = "fcmd"
version = "0.1.0"
edition = "2024"
description = "A fast dual-panel terminal file manager with Vim keybindings"
authors = ["Jastinog <jastinog.pro@gmail.com>"]
license = "MIT"
repository = "https://github.com/Jastinog/fcmd"
keywords = ["tui", "file-manager", "terminal", "vim"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
trash = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
futures = "0.3"
unicode-width = "0.2.0"
filetime = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
