[package]
name = "fcmd"
version = "0.1.0"
edition = "2024"
description = "A fast dual-panel terminal file manager with Vim keybindings"
authors = ["Jastinog <jastinog.pro@gmail.com>"]
license = "MIT"
repository = "https://github.com/Jastinog/fcmd"
keywords = ["tui", "file-manager", "terminal", "vim"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
chrono = "0.4"
rusqlite = { version = "0.40", features = ["bundled"] }
dirs = "6"
toml = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
futures = "0.3"
unicode-width = "0.2.0"
filetime = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
bzip2 = "0.6"
xz2 = "0.1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
zstd = "0.13.3"
goblin = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
